Updates to prooject

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/Graphics/RPwhite.png" alt="logo"> 
+        <img class="logo" src="Graphics/HighResWhiteLogoTransBack.png" alt="logo"> 
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Insulated Form Pools</a></li>
@@ -30,25 +30,10 @@
     </section>
     <br>
     <section class="demotext">  
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Eget magna fermentum iaculis eu non diam phasellus vestibulum. Sed felis eget velit aliquet sagittis id. Lectus arcu bibendum at varius vel pharetra vel. Nunc sed id semper risus. Quam pellentesque nec nam aliquam sem et. Urna cursus eget nunc scelerisque. Sit amet venenatis urna cursus eget nunc. Lacinia quis vel eros donec ac odio tempor orci dapibus. Elit pellentesque habitant morbi tristique senectus et netus et malesuada. Velit scelerisque in dictum non. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt vitae.
+        <p id="main-text">
+            Many people are familiar with the three general types of pool construction: concrete, fiberglass and vinyl. Insulated pool construction has the strength of concrete, installs faster than fiberglass and is priced as low as traditional vinyl construction. Insulated pools save on average 30% on energy bills. The reason why traditional pools require so much energy is due to the low ground (below the surface) temperature of 56 degrees. Pools lose 80% of their heat from the sides. Insulated pools, just like your insulated walls, reduce this heat loss. You can even EXTEND the pool season an extra month or two with an insulated pool (clients love this feature in Kentucky!). Engineered from technology developed for the NASA Space Program, Reliable Pools are the only structurally insulated swimming pools manufactured using an R-10 insulated panel – an industry first. Our walls are more durable than steel, polymer, and even 12 inches of concrete. The combination of strength, lightness, and resistance to stress, corrosion, and heat loss makes the Reliable Pool a cost effective and smart backyard investment. In fact, the insulated pool construction has a True Lifetime Transferrable Warranty to never rust, warp or crack. 
         </p>
         <br>
-        <p>
-            Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. Lobortis elementum nibh tellus molestie nunc. Aliquam purus sit amet luctus venenatis lectus. Sem integer vitae justo eget. Ut tellus elementum sagittis vitae. Urna nunc id cursus metus aliquam eleifend mi in nulla. In mollis nunc sed id. Laoreet non curabitur gravida arcu ac tortor. Et netus et malesuada fames ac turpis egestas sed tempus. Facilisis magna etiam tempor orci. Fames ac turpis egestas maecenas pharetra convallis posuere. Massa tincidunt dui ut ornare lectus sit amet est. Vitae auctor eu augue ut lectus arcu bibendum. Eget magna fermentum iaculis eu. Pellentesque adipiscing commodo elit at imperdiet dui accumsan. Tellus cras adipiscing enim eu turpis. Phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet.
-        </p>
-        <br>
-        <p>
-            Ultrices in iaculis nunc sed. Ac placerat vestibulum lectus mauris. Natoque penatibus et magnis dis parturient montes nascetur. Diam donec adipiscing tristique risus. Sed risus pretium quam vulputate. Mi proin sed libero enim sed faucibus turpis. Nunc lobortis mattis aliquam faucibus. Scelerisque purus semper eget duis at tellus. Quis enim lobortis scelerisque fermentum dui. Sed arcu non odio euismod lacinia at quis risus sed. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis natoque. Magna ac placerat vestibulum lectus mauris ultrices eros. Amet nisl suscipit adipiscing bibendum est ultricies integer. Pellentesque nec nam aliquam sem et tortor consequat id. Egestas sed tempus urna et pharetra pharetra massa massa ultricies. Tortor at risus viverra adipiscing at. Sit amet consectetur adipiscing elit ut aliquam purus. Et sollicitudin ac orci phasellus egestas tellus rutrum. Vitae sapien pellentesque habitant morbi tristique senectus. Vestibulum morbi blandit cursus risus at ultrices.
-        </p>
-        <br>
-        <p>
-            Massa id neque aliquam vestibulum morbi blandit cursus. Amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus. Suspendisse in est ante in nibh. Ultrices dui sapien eget mi. Sit amet est placerat in egestas. Interdum velit euismod in pellentesque. Tortor vitae purus faucibus ornare suspendisse sed nisi. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Cursus eget nunc scelerisque viverra mauris in aliquam. In cursus turpis massa tincidunt dui. Pellentesque id nibh tortor id aliquet lectus proin nibh. A arcu cursus vitae congue mauris rhoncus aenean. Nisl nisi scelerisque eu ultrices vitae auctor. Sem fringilla ut morbi tincidunt augue. Volutpat odio facilisis mauris sit amet massa. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt vitae. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras.
-        </p>
-        <br>
-        <p>
-            Porttitor lacus luctus accumsan tortor posuere ac ut consequat. Neque vitae tempus quam pellentesque nec. In mollis nunc sed id semper risus in hendrerit gravida. Egestas sed sed risus pretium quam vulputate dignissim suspendisse in. Duis convallis convallis tellus id. Quam adipiscing vitae proin sagittis. Scelerisque eu ultrices vitae auctor. Eget duis at tellus at urna condimentum mattis pellentesque. Volutpat diam ut venenatis tellus in metus. Aliquam ut porttitor leo a diam sollicitudin tempor. Viverra nam libero justo laoreet sit amet. Cras ornare arcu dui vivamus arcu. At imperdiet dui accumsan sit amet nulla facilisi. Non quam lacus suspendisse faucibus interdum posuere lorem. Sit amet consectetur adipiscing elit duis tristique sollicitudin. Et malesuada fames ac turpis egestas integer eget aliquet. Tristique senectus et netus et malesuada fames. Facilisis volutpat est velit egestas dui id ornare. Pharetra et ultrices neque ornare aenean euismod elementum nisi quis. Malesuada fames ac turpis egestas maecenas pharetra convallis.</p>
-        </p>
     </section>
 </body>
 </html>
