Several adjustments to styling and other portions of the page. Added Contact form.

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <h1 id="main-text-header">Why Use Insulated Pool Forms?</h1>
         <br>
         <p id="main-text">
-            Many people are familiar with the three general types of pool construction: concrete, fiberglass and vinyl. Insulated pool construction has the strength of concrete, installs faster than fiberglass and is priced as low as traditional vinyl construction. Insulated pools save on average 30% on energy bills. The reason why traditional pools require so much energy is due to the low ground (below the surface) temperature of 56 degrees. Pools lose 80% of their heat from the sides. Insulated pools, just like your insulated walls, reduce this heat loss. You can even EXTEND the pool season an extra month or two with an insulated pool (clients love this feature in Kentucky!). Engineered from technology developed for the NASA Space Program, Reliable Pools are the only structurally insulated swimming pools manufactured using an R-10 insulated panel – an industry first. Our walls are more durable than steel, polymer, and even 12 inches of concrete. The combination of strength, lightness, and resistance to stress, corrosion, and heat loss makes the Reliable Pool a cost effective and smart backyard investment. In fact, the insulated pool construction has a True Lifetime Transferrable Warranty to never rust, warp or crack. 
+            Many peopext">le are familiar with the three general types of pool construction: concrete, fiberglass and vinyl. Insulated pool construction has the strength of concrete, installs faster than fiberglass and is priced as low as traditional vinyl construction. Insulated pools save on average 30% on energy bills. The reason why traditional pools require so much energy is due to the low ground (below the surface) temperature of 56 degrees. Pools lose 80% of their heat from the sides. Insulated pools, just like your insulated walls, reduce this heat loss. You can even EXTEND the pool season an extra month or two with an insulated pool (clients love this feature in Kentucky!). Engineered from technology developed for the NASA Space Program, Reliable Pools are the only structurally insulated swimming pools manufactured using an R-10 insulated panel – an industry first. Our walls are more durable than steel, polymer, and even 12 inches of concrete. The combination of strength, lightness, and resistance to stress, corrosion, and heat loss makes the Reliable Pool a cost effective and smart backyard investment. In fact, the insulated pool construction has a True Lifetime Transferrable Warranty to never rust, warp or crack. 
         </p>
         <br>
-        <h2 id="pool-shape-header">Pool Shapes</h2>
+        <h2 id="pool-shape-header">Pool Shapes We Offer</h2>
         
         <ul id="poolshape">
             <li><img src="Graphics/Inground1.png"></li>
@@ -49,6 +49,27 @@
             <li><img src="Graphics/Inground7.png"></li>
             <li><img src="Graphics/Inground8.png"></li>
         </ul>
+        <br>
+            <div></div>
+        <br>
+
+        <h1 id="contact-form">Contact Us!</h1>
+        <form action="/contact" method="post">
+            <ul id="contact-list">
+             <li>
+               <label for="name">Name:</label><br>
+               <input type="text" id="name" name="user_name">
+             </li>
+             <li>
+               <label for="mail">E-mail:</label><br>
+               <input type="email" id="mail" name="user_email">
+             </li>
+             <li>
+               <label for="msg">Describe Project:</label><br>
+               <textarea id="msg" name="user_message"></textarea>
+             </li>
+            </ul>
+           </form>
 
     </section>
 </body>
