Added the countdown timer using JS to indicate the end of summer!

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="Graphics/RPFavicon.PNG" />
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <title>Reliable Pools | 502.265.6267</title>
+    <script src="script.js" type="text/javascript"></script>
+
 </head>
 <body>
     <header>
@@ -50,9 +51,36 @@
             <li><img src="Graphics/Inground8.png"></li>
         </ul>
         <br>
-            <div></div>
-        <br>
 
+        <section class="countdown-timer">
+            <div class="timer-head">
+                <h2>Get your install scheduled today! It's only...</h2>
+            </div>
+
+            <div class="timer"> 
+                <p id="day"></p>
+                <h5>days</h5>
+            </div>
+
+            <div class="timer"> 
+                <p id="hour"></p>
+                <h5>hours</h5>
+            </div>
+
+            <div class="timer"> 
+                <p id="minute"></p>
+                <h5>minutes</h5>
+            </div>
+
+            <div class="timer"> 
+                <p id="second"></p>
+                <h5>seconds</h5>
+            </div>
+            <br>
+            <h2>...Until the end of SUMMER!</h2>
+        </section>
+
+        <br>
         <h1 id="contact-form">Contact Us!</h1>
         <form action="/contact" method="post">
             <ul id="contact-list">
