Final cosmetic adjustments

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                <input type="email" id="mail" name="user_email">
              </li>
              <li>
+                <label for="phonenumber">Phone Number</label><br>
+                <input id="phonenumber" name="phone_number"></input>
+              </li>
+             <li>
                <label for="msg">Describe Project:</label><br>
                <textarea id="msg" name="user_message"></textarea>
              </li>
