--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="contentboxesmain">
             <a class="contentbox1" href="#top">Twenty-day project completion guarantee!</a>
-            <a class="contentbox2" href="#top">"Over 2,000 pool of all types installed to date!”</a>
+            <a class="contentbox2" href="#top">"Over 2,000 pools of all types installed to date!”</a>
             <a class="contentbox3" href="#top">Click here to begin the process of making your backyard dream come true! <br> (Quote Form)</a>
     </section>
     <br>
